--- a/index.html
+++ b/index.html
@@ -293,6 +293,6 @@
         </div>
     </footer>
 
-    <script src="scripts/main.js"></script>
+    <script src="script/main.js"></script>
 </body>
 </html>
